1，doris k8部署。2，doris和juicefs集成失败。3，doris spark connector导入10g数据，内部表tpcds测试完成。4，presto/trino和juicefs集成成功。5，presto/trino的10g数据，hive表tpcds测试，presto性能明显占优。6，kyuubi部署后，thrift报错，调整hive还是报错。（可能和spark在mac本地编译有关。）